add review entity